gcc-7 (7.5.0-6) UNRELEASED; urgency=medium

  * For all runtime libraries, generate dependencies on libgcc-sN instead 
    on libgccN, when libgccN isn't built from this source package.
  * Fix PR sanitizer/92154, taken from the gcc-8 branch (build failure
    with glibc-2.31).
  * Stop shipping the include-fixed directory.
  * Fix building gnattools in an amd64 "cross" build.

 -- Matthias Klose <doko@debian.org>  Sat, 07 Mar 2020 14:10:31 +0100

gcc-7 (7.5.0-5) unstable; urgency=medium

  * No-change upload without binary packages.

 -- Matthias Klose <doko@debian.org>  Sat, 08 Feb 2020 06:24:47 +0100

gcc-7 (7.5.0-4) unstable; urgency=medium

  * Fix buffer overflow in the gcc-search-prefixed-as-ld patch.
    Addresses: #946792.
  * Dump the config.log for the configure step when it fails.
  * On architectures where libgcc_s.so is a symlink, replace the symlink with
    a simple linker script.
  * libgcc-dev: Don't ship a libgcc_so.1 symlink in gcclibdir.
    Addresses: #950525.
  * Bump standards version.

 -- Matthias Klose <doko@debian.org>  Mon, 03 Feb 2020 11:50:51 +0100

gcc-7 (7.5.0-3) unstable; urgency=medium

  * Rebuild for isl soname change.

 -- Matthias Klose <doko@debian.org>  Mon, 02 Dec 2019 12:39:03 +0100

gcc-7 (7.5.0-2) unstable; urgency=medium

  * Stop building -dbg packages, keep building the libstc++6-7-dbg package
    containing just the libstdc++ debug build.

 -- Matthias Klose <doko@debian.org>  Thu, 28 Nov 2019 11:08:55 +0100

gcc-7 (7.5.0-1) unstable; urgency=medium

  * GCC 7.5.0 release.
  * Refresh patches.

 -- Matthias Klose <doko@debian.org>  Thu, 14 Nov 2019 10:01:51 +0100

gcc-7 (7.4.0-15) unstable; urgency=medium

  * GCC 7.5.0 release candidate 1.
  * Update to SVN 20191105 (r277823) from the gcc-7-branch.
    - Fix PR target/91275 (PPC), PR libstdc++/92143, PR target/88167 (ARM),
      PR debug/91887, PR tree-optimization/91812, PR tree-optimization/92131,