@@ -2192,6 +2192,10 @@ endif
 	    mandir=/$(PF)/share/man \
 		install
 
+	mv $(d)/$(gcc_lib_dir)/include-fixed/{limits,syslimits}.h \
+	  $(d)/$(gcc_lib_dir)/include/.
+	rm -rf $(d)/$(gcc_lib_dir)/include-fixed
+
 ifeq ($(DEB_STAGE)-$(DEB_CROSS),rtlibs-yes)
 	@echo configured_libdir=$(configured_libdir) / libdir=$(libdir) / usr_lib=$(usr_lib)
 	ls $(d)/$(PF)/$(TARGET_ALIAS)/lib
@@ -2405,6 +2409,10 @@ $(install_hppa64_stamp): $(build_hppa64_stamp)
 
 	rm -rf $(d_hppa64)/$(PF)/hppa64-linux-gnu
 	rm -rf $(d_hppa64)/$(PF)/lib/gcc/hppa64-linux-gnu/$(BASE_VERSION)/install-tools
+
+	mv $(d_hppa64)/$(PF)/lib/gcc/hppa64-linux-gnu/$(BASE_VERSION)/include-fixed/{limits,syslimits}.h \
+	  $(d_hppa64)/$(PF)/lib/gcc/hppa64-linux-gnu/$(BASE_VERSION)/include/.
+	rm -rf $(d_hppa64)/$(PF)/lib/gcc/hppa64-linux-gnu/$(BASE_VERSION)/include-fixed
 
 ifeq ($(versioned_packages),yes)
 	for i in cpp gcc-ar gcc-nm gcc-ranlib; do \
