@@ -4,10 +4,11 @@ gcc-7 (7.5.0-6) UNRELEASED; urgency=medium
     on libgccN, when libgccN isn't built from this source package.
   * Fix PR sanitizer/92154, taken from the gcc-8 branch (build failure
     with glibc-2.31).
-  * Stop shipping the include-fixed directory.
   * Fix building gnattools in an amd64 "cross" build.
+  * Move limits.h and syslimits.h into <gcc-lib-dir>/include, and remove
+    <gcc-lib-dir>/include-fixed.
 
- -- Matthias Klose <doko@debian.org>  Sat, 07 Mar 2020 14:10:31 +0100
+ -- Matthias Klose <doko@debian.org>  Mon, 23 Mar 2020 16:54:13 +0100
 
 gcc-7 (7.5.0-5) unstable; urgency=medium
 
